# fastCrypter

./: .gitignore  .readthedocs.yml  API_REFERENCE.md  EXAMPLES_FIXES_REPORT.md  MANIFEST.in  README.md  SESSION_REPORT.md  TASK.md  USAGE_GUIDE.md  build_native.py  final_test.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  setup_extensions.py
.github/workflows/: pypi.yml
encrypter/: __init__.py  secure_compressor.py
examples/: algorithm_test.py  basic_usage.py  custom_encoding_test.py  file_test.py  native_performance_test.py
fastcrypt/: __init__.py
fastcrypt/core/: fast_compression.cpp  fast_crypto.c
fastcrypt/native/: Makefile  crypto_core.c  hash_algorithms.cpp  native_loader.py
fastcrypter/: __init__.py
fastcrypter/core/: __init__.py  key_manager.py
fastcrypter/native/: hash_algorithms.cpp
tests/: __init__.py  conftest.py  test_compressor.py  test_custom_encoder.py  test_encryptor.py  test_examples.py  test_file_encryptor.py  test_key_manager.py  test_secure_compressor.py
